# hs-neoncad

./: .gitignore  CHANGELOG.md  LICENSE  NeonCAD.html  README.md  cabal.project  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index.html  index.html  justfile  neoncad.cabal  neoncad.haddock  package-lock.json
app/: Main.hs
examples/: Main.hs  viewports.json
examples-out/: box-with-holes.scad  box-with-holes.stl  buck-converter-case.scad  ring.scad  split-solid-1.scad  split-solid-2.scad  split-solid.scad
examples-out/scad/: box-with-holes.scad  buck-converter-case.scad  builtin-shapes-2d.scad  hole-test.scad  pencil-holder.scad  random.scad  split-solid-1.scad  split-solid-2.scad  split-solid.scad
examples/Examples/: BoxWithHoles.hs  BuckConverterCase.hs  BuiltinShapes2D.hs  HoleTest.hs  PencilHolder.hs  README.md  Random.hs  Ring.hs  SplitSolid.hs
examples/Examples/Util/: Colors.hs  Generic.hs
renderings/: 01.scad
scripts/: render-scad.py
src/: NeonCAD.hs  Optimizer.hs
src/NeonCAD/: ToolBox.hs
test/: DocImgs.hs  Main.hs  NeonCADHeader.hs  NeonCADHeader2.hs  VizTest.hs
