cabal-version: 3.0
name: neoncad
version: 0.2.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Michael Bock
maintainer: no-day@posteo.net
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  out/doc-imgs/*.png

common warnings
  ghc-options: -Wall

common extensions
  default-extensions:
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot
    RankNTypes
    StandaloneDeriving

  default-language: Haskell2010

library
  import: warnings, extensions
  exposed-modules: NeonCAD
  build-depends:
    barbies,
    base ^>=4.17.2.1,
    openscad,

  hs-source-dirs: src
  default-language: Haskell2010

test-suite hs-openscad-dsl-test
  import: warnings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules:
    DocImgs
    VizTest

  main-is: Main.hs
  build-depends:
    base ^>=4.17.2.1,
    doctest,
    neoncad,
