cabal-version: 3.0
name: neoncad
version: 0.2.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Michael Bock
maintainer: no-day@posteo.net
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  doc-imgs/*.png

common warnings
  ghc-options: -Wall

common extensions
  default-extensions:
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot
    RankNTypes
    StandaloneDeriving

  default-language: Haskell2010

library
  import: warnings, extensions
  exposed-modules:
    NeonCAD
    NeonCAD.ToolBox

  build-depends:
    barbies,
    base ^>=4.17.2.1,
    linear,
    openscad,

  hs-source-dirs: src
  default-language: Haskell2010

test-suite neoncad-test
  import: warnings, extensions
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules:
    DocImgs
    VizTest

  main-is: Main.hs
  build-depends:
    base ^>=4.17.2.1,
    doctest,
    neoncad,

executable neoncad-examples
  import: warnings, extensions
  main-is: Main.hs
  other-modules:
    Examples.BoxWithHoles
    Examples.BuckConverterCase
    Examples.BuiltinShapes2D
    Examples.HoleTest
    Examples.PencilHolder
    Examples.Random
    Examples.Ring
    Examples.SplitSolid
    Examples.Util.Colors
    Examples.Util.Generic

  hs-source-dirs: examples
  build-depends:
    base >=4.14 && <5,
    linear,
    neoncad,
    random,
    transformers,

  default-language: GHC2021